<resources>
    <!-- Manifest -->
    <string name="app_name" translatable="false">Tasking</string>
    <string name="label_activity_login">Login</string>
    <string name="label_activity_helper">Helper</string>

    <!-- Menu items -->
    <string name="action_delete">Delete</string>
    <string name="action_sort">Sort</string>

    <string name="sort_by_date">Sort by: Date</string>

    <!-- Side nav -->
    <string name="navigation_drawer_open">Open the navigation drawer</string>
    <string name="navigation_drawer_close">Close the navigation drawer</string>

    <string name="nav_tasks">Tasks</string>
    <string name="nav_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Edit/Add Task Dialog -->
    <string name="add_task_dialog_title">Create your task.</string>
    <string name="add_task_dialog_add">Add</string>
    <string name="edit_task_dialog_edit">Edit</string>
    <string name="edit_task_dialog_save">Save</string>
    <string name="add_task_dialog_cancel">Cancel</string>
    <string name="add_task_dialog_error_notitle">You must enter a task title.</string>

    <!-- PermissionRationaleDialogFragment -->
    <string name="get_accounts_permission_denied">Tasking requires permission to access your Google account to sync with Google Tasks.</string>

    <!-- AboutFragment -->
    <string name="bullet">&#8226;</string>
    <string name="about_fragment_title">About</string>
    <string name="about_fragment_heading">This app was built with the help of:</string>

    <string-array name="retrofit_attrib">
        <item>Retrofit</item>
        <item>https://square.github.io/retrofit</item>
        <item>Apache 2.0</item>
    </string-array>

    <string-array name="picasso_attrib">
        <item>Picasso</item>
        <item>https://square.github.io/picasso/</item>
        <item>Apache 2.0</item>
    </string-array>

    <string-array name="civ_attrib">
        <item>CircleImageView</item>
        <item>https://github.com/hdodenhof/CircleImageView</item>
        <item>Apache 2.0</item>
    </string-array>

    <string name="apache_2.0">Apache 2.0</string>
    <string name="license_local">LICENSE (LOCAL)</string>
    <string name="license_web">LICENSE (WEB)</string>
    <string name="website">WEBSITE</string>

    <!-- Preferences -->
    <string name="pref_screen">prefscreen</string>

    <string name="pref_about_key">prefaboutkey</string>
    <string name="pref_about">About</string>

    <string name="pref_privacy_policy_key">prefprivacypolicykey</string>
    <string name="pref_privacy_policy_title">Privacy Policy</string>

    <string name="pref_account_key">prefaccountkey</string>
    <string name="pref_account">Account</string>
    <string name="pref_account_summ">Sign out of your Google account.</string>
    <string name="pref_account_message">Would you like to sign out of your Google account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="cancel">Cancel</string>

    <!-- SharedPrefs -->
    <string name="shared_prefs_account">accountpreferences</string>
    <string name="shared_prefs_email">useremail</string>
    <string name="shared_prefs_logged_in">isuserloggedin</string>
    <string name="shared_prefs_name">userdisplayname</string>
    <string name="shared_prefs_id">userid</string>
    <string name="shared_prefs_login_snackbar_shown">loginsnackbarshown</string>
    <string name="shared_prefs_sign_out_snackbar_shown">signoutsnackbarshown</string>

    <!-- User images -->
    <string name="user_image">userimage</string>
    <string name="user_cover_image">usercoverimage</string>

    <!-- Add/Edit Task Dialog -->
    <string name="task_title_hint">Enter a task.</string>
    <string name="task_note_hint">Enter a note.</string>
    <string name="task_date_button">Choose a date</string>

    <!-- Task deletion snackbar -->
    <string name="task_deleted_snackbar_text">Deleted</string>
    <string name="task_deleted_snackbar_undo">Undo</string>

    <!-- General snackbar -->
    <string name="auth_error">Error authenticating account</string>
    <string name="auth_success">"Signed in as "</string>
    <string name="just_signed_out">You have signed out.</string>

    <!-- Task API strings -->
    <string name="task_completed">completed</string>
    <string name="task_needs_action">needsAction</string>

    <!-- Login Activity -->
    <string name="subheading">A simple to-do list manager to use with Google Tasks</string>

    <!-- ListView empty message -->
    <string name="empty_listview_message">You have no tasks. Add one now!</string>
</resources>
